# gboing

./: .gitignore  AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac
include/gboing/: align.h  assert.h  bswap.h  compiler-gcc.h  compiler.h  cpp.h  qsort-template.h  qsort.h
scripts/: Makefile  README.txt  add_compiler  add_test_set.sh  compiler-base.conf  compilers.conf.example  dumpVars  for_each_compiler  for_each_env  funcs.sh  gboing.sh  qsort.conf.example  run_test_set.sh  tests.ddl
src/lib/: Makefile.am  gboing.c
src/test/: Makefile.am  copytest.c  cptests.c  glibc-qsort.c  qsort-common.h  qsort-instantiate.c  qsort.c  qsort_instantiate.c  static-strlen.c  static_strlen.c  test-common.h
